FIX : Quick fix display content page for the overflow

--- a/frontend/app/assets/css/main.css
+++ b/frontend/app/assets/css/main.css
@@ -8,6 +8,10 @@
     --color-accent: #c33623ff;
 }
 
+body {
+    @apply overflow-hidden;
+}
+
 @layer components {
     .page-width {
         @apply lg:max-w-[1200px] md:max-w-[900px] sm:max-w-[600px] max-w-[300px] mx-auto w-[80vw];
